[gd_scene load_steps=18 format=3 uid="uid://ieisg6b7t27m"]

[ext_resource type="Script" uid="uid://wi260e1iw7yv" path="res://Scripts/GameManager.gd" id="1_glv2v"]
[ext_resource type="Script" uid="uid://bqr4udpwhbmx2" path="res://Scripts/Player.gd" id="2_uu6xs"]
[ext_resource type="Script" uid="uid://b37v4clvfxo0t" path="res://Scripts/PromptControl.gd" id="3_r0du0"]
[ext_resource type="Script" uid="uid://diqldobutofpt" path="res://Scripts/MenuPanel.gd" id="4_cm0pq"]
[ext_resource type="Script" path="res://Scripts/VictoryPanel.gd" id="5_pbw6q"]
[ext_resource type="Script" path="res://Scripts/instructions_button.gd" id="5_v1gob"]
[ext_resource type="Texture2D" uid="uid://gr18mpncmcus" path="res://Assets/Floor.jpg" id="7_jw32o"]
[ext_resource type="PackedScene" path="res://Scenes/table.tscn" id="7_vy5pj"]
[ext_resource type="Texture2D" uid="uid://wu7hyyut71jl" path="res://Assets/Red_Arrow.png" id="8_50glp"]
[ext_resource type="PackedScene" path="res://Scenes/Players.tscn" id="8_bmxlf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_50glp"]
texture = ExtResource("7_jw32o")
texture_region_size = Vector2i(32, 32)
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
34:0/0 = 0
35:0/0 = 0
36:0/0 = 0
37:0/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
36:1/0 = 0
37:1/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
34:6/0 = 0
35:6/0 = 0
36:6/0 = 0
37:6/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
34:8/0 = 0
35:8/0 = 0
36:8/0 = 0
37:8/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
36:9/0 = 0
37:9/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
34:10/0 = 0
35:10/0 = 0
36:10/0 = 0
37:10/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
34:11/0 = 0
35:11/0 = 0
36:11/0 = 0
37:11/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
34:12/0 = 0
35:12/0 = 0
36:12/0 = 0
37:12/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
34:13/0 = 0
35:13/0 = 0
36:13/0 = 0
37:13/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
33:14/0 = 0
34:14/0 = 0
35:14/0 = 0
36:14/0 = 0
37:14/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
33:15/0 = 0
34:15/0 = 0
35:15/0 = 0
36:15/0 = 0
37:15/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
30:16/0 = 0
31:16/0 = 0
32:16/0 = 0
33:16/0 = 0
34:16/0 = 0
35:16/0 = 0
36:16/0 = 0
37:16/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
30:17/0 = 0
31:17/0 = 0
32:17/0 = 0
33:17/0 = 0
34:17/0 = 0
35:17/0 = 0
36:17/0 = 0
37:17/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
26:18/0 = 0
27:18/0 = 0
28:18/0 = 0
29:18/0 = 0
30:18/0 = 0
31:18/0 = 0
32:18/0 = 0
33:18/0 = 0
34:18/0 = 0
35:18/0 = 0
36:18/0 = 0
37:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
31:19/0 = 0
32:19/0 = 0
33:19/0 = 0
34:19/0 = 0
35:19/0 = 0
36:19/0 = 0
37:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
31:20/0 = 0
32:20/0 = 0
33:20/0 = 0
34:20/0 = 0
35:20/0 = 0
36:20/0 = 0
37:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
24:21/0 = 0
25:21/0 = 0
26:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0
31:21/0 = 0
32:21/0 = 0
33:21/0 = 0
34:21/0 = 0
35:21/0 = 0
36:21/0 = 0
37:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
24:22/0 = 0
25:22/0 = 0
26:22/0 = 0
27:22/0 = 0
28:22/0 = 0
29:22/0 = 0
30:22/0 = 0
31:22/0 = 0
32:22/0 = 0
33:22/0 = 0
34:22/0 = 0
35:22/0 = 0
36:22/0 = 0
37:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
23:23/0 = 0
24:23/0 = 0
25:23/0 = 0
26:23/0 = 0
27:23/0 = 0
28:23/0 = 0
29:23/0 = 0
30:23/0 = 0
31:23/0 = 0
32:23/0 = 0
33:23/0 = 0
34:23/0 = 0
35:23/0 = 0
36:23/0 = 0
37:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
14:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
21:24/0 = 0
22:24/0 = 0
23:24/0 = 0
24:24/0 = 0
25:24/0 = 0
26:24/0 = 0
27:24/0 = 0
28:24/0 = 0
29:24/0 = 0
30:24/0 = 0
31:24/0 = 0
32:24/0 = 0
33:24/0 = 0
34:24/0 = 0
35:24/0 = 0
36:24/0 = 0
37:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0
20:25/0 = 0
21:25/0 = 0
22:25/0 = 0
23:25/0 = 0
24:25/0 = 0
25:25/0 = 0
26:25/0 = 0
27:25/0 = 0
28:25/0 = 0
29:25/0 = 0
30:25/0 = 0
31:25/0 = 0
32:25/0 = 0
33:25/0 = 0
34:25/0 = 0
35:25/0 = 0
36:25/0 = 0
37:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
11:26/0 = 0
12:26/0 = 0
13:26/0 = 0
14:26/0 = 0
15:26/0 = 0
16:26/0 = 0
17:26/0 = 0
18:26/0 = 0
19:26/0 = 0
20:26/0 = 0
21:26/0 = 0
22:26/0 = 0
23:26/0 = 0
24:26/0 = 0
25:26/0 = 0
26:26/0 = 0
27:26/0 = 0
28:26/0 = 0
29:26/0 = 0
30:26/0 = 0
31:26/0 = 0
32:26/0 = 0
33:26/0 = 0
34:26/0 = 0
35:26/0 = 0
36:26/0 = 0
37:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
14:27/0 = 0
15:27/0 = 0
16:27/0 = 0
17:27/0 = 0
18:27/0 = 0
19:27/0 = 0
20:27/0 = 0
21:27/0 = 0
22:27/0 = 0
23:27/0 = 0
24:27/0 = 0
25:27/0 = 0
26:27/0 = 0
27:27/0 = 0
28:27/0 = 0
29:27/0 = 0
30:27/0 = 0
31:27/0 = 0
32:27/0 = 0
33:27/0 = 0
34:27/0 = 0
35:27/0 = 0
36:27/0 = 0
37:27/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
9:28/0 = 0
10:28/0 = 0
11:28/0 = 0
12:28/0 = 0
13:28/0 = 0
14:28/0 = 0
15:28/0 = 0
16:28/0 = 0
17:28/0 = 0
18:28/0 = 0
19:28/0 = 0
20:28/0 = 0
21:28/0 = 0
22:28/0 = 0
23:28/0 = 0
24:28/0 = 0
25:28/0 = 0
26:28/0 = 0
27:28/0 = 0
28:28/0 = 0
29:28/0 = 0
30:28/0 = 0
31:28/0 = 0
32:28/0 = 0
33:28/0 = 0
34:28/0 = 0
35:28/0 = 0
36:28/0 = 0
37:28/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
5:29/0 = 0
6:29/0 = 0
7:29/0 = 0
8:29/0 = 0
9:29/0 = 0
10:29/0 = 0
11:29/0 = 0
12:29/0 = 0
13:29/0 = 0
14:29/0 = 0
15:29/0 = 0
16:29/0 = 0
17:29/0 = 0
18:29/0 = 0
19:29/0 = 0
20:29/0 = 0
21:29/0 = 0
22:29/0 = 0
23:29/0 = 0
24:29/0 = 0
25:29/0 = 0
26:29/0 = 0
27:29/0 = 0
28:29/0 = 0
29:29/0 = 0
30:29/0 = 0
31:29/0 = 0
32:29/0 = 0
33:29/0 = 0
34:29/0 = 0
35:29/0 = 0
36:29/0 = 0
37:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
14:30/0 = 0
15:30/0 = 0
16:30/0 = 0
17:30/0 = 0
18:30/0 = 0
19:30/0 = 0
20:30/0 = 0
21:30/0 = 0
22:30/0 = 0
23:30/0 = 0
24:30/0 = 0
25:30/0 = 0
26:30/0 = 0
27:30/0 = 0
28:30/0 = 0
29:30/0 = 0
30:30/0 = 0
31:30/0 = 0
32:30/0 = 0
33:30/0 = 0
34:30/0 = 0
35:30/0 = 0
36:30/0 = 0
37:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
7:31/0 = 0
8:31/0 = 0
9:31/0 = 0
10:31/0 = 0
11:31/0 = 0
12:31/0 = 0
13:31/0 = 0
14:31/0 = 0
15:31/0 = 0
16:31/0 = 0
17:31/0 = 0
18:31/0 = 0
19:31/0 = 0
20:31/0 = 0
21:31/0 = 0
22:31/0 = 0
23:31/0 = 0
24:31/0 = 0
25:31/0 = 0
26:31/0 = 0
27:31/0 = 0
28:31/0 = 0
29:31/0 = 0
30:31/0 = 0
31:31/0 = 0
32:31/0 = 0
33:31/0 = 0
34:31/0 = 0
35:31/0 = 0
36:31/0 = 0
37:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
4:32/0 = 0
5:32/0 = 0
6:32/0 = 0
7:32/0 = 0
8:32/0 = 0
9:32/0 = 0
10:32/0 = 0
11:32/0 = 0
12:32/0 = 0
13:32/0 = 0
14:32/0 = 0
15:32/0 = 0
16:32/0 = 0
17:32/0 = 0
18:32/0 = 0
19:32/0 = 0
20:32/0 = 0
21:32/0 = 0
22:32/0 = 0
23:32/0 = 0
24:32/0 = 0
25:32/0 = 0
26:32/0 = 0
27:32/0 = 0
28:32/0 = 0
29:32/0 = 0
30:32/0 = 0
31:32/0 = 0
32:32/0 = 0
33:32/0 = 0
34:32/0 = 0
35:32/0 = 0
36:32/0 = 0
37:32/0 = 0
0:33/0 = 0
1:33/0 = 0
2:33/0 = 0
3:33/0 = 0
4:33/0 = 0
5:33/0 = 0
6:33/0 = 0
7:33/0 = 0
8:33/0 = 0
9:33/0 = 0
10:33/0 = 0
11:33/0 = 0
12:33/0 = 0
13:33/0 = 0
14:33/0 = 0
15:33/0 = 0
16:33/0 = 0
17:33/0 = 0
18:33/0 = 0
19:33/0 = 0
20:33/0 = 0
21:33/0 = 0
22:33/0 = 0
23:33/0 = 0
24:33/0 = 0
25:33/0 = 0
26:33/0 = 0
27:33/0 = 0
28:33/0 = 0
29:33/0 = 0
30:33/0 = 0
31:33/0 = 0
32:33/0 = 0
33:33/0 = 0
34:33/0 = 0
35:33/0 = 0
36:33/0 = 0
37:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
3:34/0 = 0
4:34/0 = 0
5:34/0 = 0
6:34/0 = 0
7:34/0 = 0
8:34/0 = 0
9:34/0 = 0
10:34/0 = 0
11:34/0 = 0
12:34/0 = 0
13:34/0 = 0
14:34/0 = 0
15:34/0 = 0
16:34/0 = 0
17:34/0 = 0
18:34/0 = 0
19:34/0 = 0
20:34/0 = 0
21:34/0 = 0
22:34/0 = 0
23:34/0 = 0
24:34/0 = 0
25:34/0 = 0
26:34/0 = 0
27:34/0 = 0
28:34/0 = 0
29:34/0 = 0
30:34/0 = 0
31:34/0 = 0
32:34/0 = 0
33:34/0 = 0
34:34/0 = 0
35:34/0 = 0
36:34/0 = 0
37:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0
3:35/0 = 0
4:35/0 = 0
5:35/0 = 0
6:35/0 = 0
7:35/0 = 0
8:35/0 = 0
9:35/0 = 0
10:35/0 = 0
11:35/0 = 0
12:35/0 = 0
13:35/0 = 0
14:35/0 = 0
15:35/0 = 0
16:35/0 = 0
17:35/0 = 0
18:35/0 = 0
19:35/0 = 0
20:35/0 = 0
21:35/0 = 0
22:35/0 = 0
23:35/0 = 0
24:35/0 = 0
25:35/0 = 0
26:35/0 = 0
27:35/0 = 0
28:35/0 = 0
29:35/0 = 0
30:35/0 = 0
31:35/0 = 0
32:35/0 = 0
33:35/0 = 0
34:35/0 = 0
35:35/0 = 0
36:35/0 = 0
37:35/0 = 0
0:36/0 = 0
1:36/0 = 0
2:36/0 = 0
3:36/0 = 0
4:36/0 = 0
5:36/0 = 0
6:36/0 = 0
7:36/0 = 0
8:36/0 = 0
9:36/0 = 0
10:36/0 = 0
11:36/0 = 0
12:36/0 = 0
13:36/0 = 0
14:36/0 = 0
15:36/0 = 0
16:36/0 = 0
17:36/0 = 0
18:36/0 = 0
19:36/0 = 0
20:36/0 = 0
21:36/0 = 0
22:36/0 = 0
23:36/0 = 0
24:36/0 = 0
25:36/0 = 0
26:36/0 = 0
27:36/0 = 0
28:36/0 = 0
29:36/0 = 0
30:36/0 = 0
31:36/0 = 0
32:36/0 = 0
33:36/0 = 0
34:36/0 = 0
35:36/0 = 0
36:36/0 = 0
37:36/0 = 0
0:37/0 = 0
1:37/0 = 0
2:37/0 = 0
3:37/0 = 0
4:37/0 = 0
5:37/0 = 0
6:37/0 = 0
7:37/0 = 0
8:37/0 = 0
9:37/0 = 0
10:37/0 = 0
11:37/0 = 0
12:37/0 = 0
13:37/0 = 0
14:37/0 = 0
15:37/0 = 0
16:37/0 = 0
17:37/0 = 0
18:37/0 = 0
19:37/0 = 0
20:37/0 = 0
21:37/0 = 0
22:37/0 = 0
23:37/0 = 0
24:37/0 = 0
25:37/0 = 0
26:37/0 = 0
27:37/0 = 0
28:37/0 = 0
29:37/0 = 0
30:37/0 = 0
31:37/0 = 0
32:37/0 = 0
33:37/0 = 0
34:37/0 = 0
35:37/0 = 0
36:37/0 = 0
37:37/0 = 0
0:0/size_in_atlas = Vector2i(19, 6)
0:0/0 = 0
0:6/size_in_atlas = Vector2i(19, 6)
0:6/0 = 0
0:12/size_in_atlas = Vector2i(19, 7)
0:12/0 = 0

[sub_resource type="TileSet" id="TileSet_vy5pj"]
sources/0 = SubResource("TileSetAtlasSource_50glp")

[sub_resource type="AtlasTexture" id="AtlasTexture_50glp"]
atlas = ExtResource("8_50glp")
region = Rect2(0, 0, 183, 225)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy5pj"]
atlas = ExtResource("8_50glp")
region = Rect2(183, 0, 183, 225)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmxlf"]
atlas = ExtResource("8_50glp")
region = Rect2(0, 225, 183, 225)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kpch"]
atlas = ExtResource("8_50glp")
region = Rect2(183, 225, 183, 225)

[sub_resource type="SpriteFrames" id="SpriteFrames_frkhe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50glp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy5pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmxlf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kpch")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Main" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_glv2v")

[node name="Player1" type="Node" parent="."]
script = ExtResource("2_uu6xs")

[node name="Player2" type="Node" parent="."]
script = ExtResource("2_uu6xs")
player_id = 2

[node name="Audio" type="AudioStreamPlayer" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="P1Bar" type="ProgressBar" parent="UI"]
custom_minimum_size = Vector2(350, 50)
offset_right = 4.0
offset_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
metadata/_edit_use_anchors_ = true

[node name="P2Bar" type="ProgressBar" parent="UI"]
custom_minimum_size = Vector2(350, 50)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -4.0
offset_bottom = 27.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
metadata/_edit_use_anchors_ = true

[node name="P1Prompt" type="Control" parent="UI"]
z_index = 1
custom_minimum_size = Vector2(350, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_r0du0")
metadata/_edit_use_anchors_ = true

[node name="MainLabel" type="Label" parent="UI/P1Prompt"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="P2Prompt" type="Control" parent="UI"]
z_index = 1
custom_minimum_size = Vector2(350, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_r0du0")
metadata/_edit_use_anchors_ = true

[node name="MainLabel" type="Label" parent="UI/P2Prompt"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="P1Name" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 30
text = "Player 1"

[node name="P2Name" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 30
text = "Player 2"

[node name="MenuPanel" type="Control" parent="UI"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_cm0pq")

[node name="Backdrop" type="ColorRect" parent="UI/MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.003921569)

[node name="Center" type="CenterContainer" parent="UI/MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/MenuPanel/Center"]
custom_minimum_size = Vector2(520, 260)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="UI/MenuPanel/Center/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BigTitle" type="Label" parent="UI/MenuPanel/Center/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Clickety Wrestling"
horizontal_alignment = 1

[node name="Title" type="Label" parent="UI/MenuPanel/Center/Panel/VBox"]
layout_mode = 2
text = "Enter Player Names"

[node name="P1Edit" type="LineEdit" parent="UI/MenuPanel/Center/Panel/VBox"]
layout_mode = 2
placeholder_text = "Player 1"

[node name="P2Edit" type="LineEdit" parent="UI/MenuPanel/Center/Panel/VBox"]
layout_mode = 2
placeholder_text = "Player 2"

[node name="StartButton" type="Button" parent="UI/MenuPanel/Center/Panel/VBox"]
layout_mode = 2
text = "Start"

[node name="InstructionsButton" type="Button" parent="UI/MenuPanel/Center/Panel/VBox"]
layout_mode = 2
text = "Instructions"
script = ExtResource("5_v1gob")

[node name="VictoryPanel" type="Control" parent="UI"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_pbw6q")

[node name="Backdrop" type="ColorRect" parent="UI/VictoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Center" type="CenterContainer" parent="UI/VictoryPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="UI/VictoryPanel/Center"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="UI/VictoryPanel/Center/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WinTitle" type="Label" parent="UI/VictoryPanel/Center/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Congratulations!"

[node name="WinnerName" type="Label" parent="UI/VictoryPanel/Center/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36

[node name="PlayAgain" type="Button" parent="UI/VictoryPanel/Center/Panel/VBox"]
layout_mode = 2
text = "Play Again"

[node name="MenuButton" type="Button" parent="UI/VictoryPanel/Center/Panel/VBox"]
layout_mode = 2
text = "Main Menu"

[node name="Table" parent="UI" instance=ExtResource("7_vy5pj")]
position = Vector2(-7, 167)

[node name="Players" parent="UI" instance=ExtResource("8_bmxlf")]
position = Vector2(-31, 330)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_vy5pj")
format = 2
layer_0/tile_data = PackedInt32Array(3342353, 0, 0, 3407889, 0, 0, 3407927, 0, 0, 3407963, 0, 0, 3407964, 0, 0, 3407965, 0, 0, 2687070, 0, 0, 2687044, 0, 0, 2555916, 0, 0, 2621452, 0, 0, 2555934, 0, 0, 2555954, 0, 0, 2555977, 0, 0, 1900639, 0, 0, 1769544, 0, 0, 1769522, 0, 0, 1703966, 0, 0, 1769502, 0, 0, 1835019, 0, 0, 1179654, 0, 0, 1048606, 0, 0, 1114142, 0, 0, 1114157, 0, 0, 1179693, 0, 0, 1245244, 0, 0, 1245255, 0, 0, 1179736, 0, 0, 589919, 0, 0, 524357, 0, 0, 393263, 0, 0, 458785, 0, 0, 524302, 0, 0, 65539, 0, 0, 65566, 0, 0, 131124, 0, 0, 131148, 0, 0, 65638, 0, 0, 3211306, 0, 0)

[node name="RedArrow" type="AnimatedSprite2D" parent="."]
position = Vector2(787, -283)
sprite_frames = SubResource("SpriteFrames_frkhe")
frame_progress = 0.8004374

[connection signal="pressed" from="UI/MenuPanel/Center/Panel/VBox/InstructionsButton" to="UI/MenuPanel/Center/Panel/VBox/InstructionsButton" method="_on_pressed"]
